# nsolv

./: CMakeLists.txt  README  Solver.cpp  Solver.h  SolverManager.cpp  SolverManager.h  config.h.in  global.h  main.cpp
config/: example.cfg  logging.cfg
scripts/: extract-times.sh  extract-winner.sh
